tests/suite/errors/e51_invalid_octal_digit.rs
// err: invalid digit in octal literal

fn main() {
    let _ = 0o78;
}
